--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/MyLeaguesTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/MyLeaguesTile.razor
@@ -373,7 +373,7 @@
                 return "bronze";
         }
 
-        if (memberCount > 4 && rank > (memberCount.Value * 0.75))
+        if (memberCount > 4 && rank > memberCount.Value * 0.75)
             return "red";
 
         return "blue";
