--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/EndOfSeasonPrizesTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/EndOfSeasonPrizesTile.razor
@@ -53,7 +53,7 @@
 @code {
     [Parameter] public List<PrizeDto>? Prizes { get; set; }
     [Parameter] public bool IsLoading { get; set; }
-    [Parameter] public bool IsExpandedByDefault { get; set; } = false;
+    [Parameter] public bool IsExpandedByDefault { get; set; }
 
     private bool _isExpanded;
 
