--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Predictions/BoostCard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Predictions/BoostCard.razor
@@ -25,7 +25,7 @@
         }
         else
         {
-            <div class="@(GetBoostRemainingCss(DisplayRemaining))">
+            <div class="@GetBoostRemainingCss(DisplayRemaining)">
                 <span class="badge-icon">
                     <span class="fw-bold">@DisplayRemaining</span>
                 </span>
@@ -119,7 +119,7 @@
             await HandleToggle();
     }
 
-    private string GetBoostRemainingCss(int remaining)
+    private static string GetBoostRemainingCss(int remaining)
     {
         return remaining <= 0 ? "badge-group badge-group--red" : "badge-group badge-group--green";
     }
